--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -4124,7 +4124,8 @@
     "#Code task 36#\n",
     "#Use ski_data's `plot()` method to create a scatterplot (kind='scatter') with 'AdultWeekday' on the x-axis and\n",
     "#'AdultWeekend' on the y-axis\n",
-    "ski_data.plot(x='AdultWeekday', y='AdultWeekend', kind='scatter');"
+    "ski_data.plot(x='AdultWeekday', y='AdultWeekend', kind='scatter')\n",
+    "plt.title(\"Weekday vs Weekend Ticket Price\");"
    ]
   },
   {
